Fix alignment, add logo

--- a/src/styles.css
+++ b/src/styles.css
@@ -3,14 +3,14 @@
 
 
 body {
-  margin: 0;
+  margin: 10 px;
   padding: 0;
-  font-family: Arial, sans-serif; /* Adjust the font family as needed */
+  font-family: Arial, sans-serif;  /* Arial, sans-serif;Adjust the font family as needed */
   font-size: 16px;
   display: flex;
   flex-direction: column;
   align-items: center; /* Center the content horizontally */
-  background-color: white;/* #f0f0f0;  Set a background color if desired */
+  background-color: white;/* #f0f0f0; #427bd2;  Set a background color if desired */
   color: #333;
 }
 
@@ -18,14 +18,21 @@ body {
   max-width: 100%;
   margin: 0 auto;
   padding: 20px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
 }
 
 .header {
   width: 100%;
-  margin: 10px;
   display: flex;
   justify-content: space-between;
-  padding: 10px; /* Add padding as needed */
+  box-sizing: border-box; /* Include padding and border in the element's total width and height */
+}
+
+.footer {
+  padding-top: 20px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
   box-sizing: border-box; /* Include padding and border in the element's total width and height */
 }
 
@@ -39,6 +46,7 @@ body {
 .left-cell,
 .right-cell {
   width: 10%; /* Adjust the width as needed */
+  vertical-align: middle
 }
 
 .small-cell {
@@ -55,6 +63,7 @@ body {
 .responsive-image {
   width: 100%; /* Make the image take up 100% of its container width */
   height: auto; /* Maintain the image's aspect ratio */
+  vertical-align: middle;
 }
 
 .main-content {
@@ -68,19 +77,6 @@ body {
   justify-content: center;
   margin-top: 20px;
   text-align: center;
-}
-
-.profile-picture {
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  overflow: hidden;
-}
-
-.profile-picture img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
 }
 
 .description h1 {
@@ -135,23 +131,6 @@ nav ul li {
   align-items: center;
   justify-content: center;
   margin-top: 20px;
-}
-
-.box {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
-/* Introduction Section */
-#introduction {
-  margin-bottom: 20px;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
-}
-
-/* Achievement Section */
-#achievement {
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
 }
 
 .subcomponent {
